# asi

./: .env.example  .gitignore  README.md  download_model_from_wandb.py  pyproject.toml  requirements.txt  test_wandb.py
api/: main.py  model_loader.py  schemas.py
app/: streamlit_app.py
conf/base/: catalog.yml  parameters.yml
metrics/: validation_metrics.json
notebooks/: 01_eda.ipynb
scripts/: seed_db.py
src/asi_projekt/: __main__.py  pipeline_registry.py  settings.py
src/asi_projekt/pipelines/automl/: nodes.py  pipeline.py
src/asi_projekt/pipelines/data_processing/: nodes.py  pipeline.py
src/asi_projekt/pipelines/synthetic/: nodes.py  pipeline.py
