[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "asi_projekt"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
asi-projekt = "asi_projekt.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]

[tool.kedro]
package_name = "asi_projekt"
project_name = "ASI Projekt"
kedro_init_version = "0.19.9"
tools = [ "Linting", "Data Structure",]
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "asi_projekt.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "d21d103794774736bdd1967c37ac9496"
